--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -15,6 +15,7 @@ jobs:
           node-version: '14'
 
       - name: Build
+        run: npm install
         run: npm run build
 
       - name: Deploy
