--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -14,9 +14,8 @@ jobs:
         with:
           node-version: '14'
 
-      - name: Build
-        run: npm install
-        run: npm run build
+      - name: Install dependencies & build
+        run: npm install && npm run build
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
