--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"@fortawesome/fontawesome-free": "^5.15.3",
 		"@sveltejs/adapter-static": "^1.0.0-next.4",
 		"@sveltejs/svelte-virtual-list": "^3.0.1",
+		"make-dir": "^3.1.0",
 		"readdirp": "^3.6.0",
 		"svelte-tiny-virtual-list": "^1.1.5"
 	}
