--- a/package.json
+++ b/package.json
@@ -3,34 +3,30 @@
 	"version": "0.0.1",
 	"scripts": {
 		"dev": "svelte-kit dev",
-		"build": "svelte-kit build",
+		"build": "rm -R build; svelte-kit build && rm -R build/temp",
 		"start": "svelte-kit start",
-		"lint": "eslint .",
-		"postinstall": "node ./scripts/postinstall.cjs"
+		"lint": "eslint ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-node": "next",
 		"@sveltejs/kit": "next",
-		"@typescript-eslint/eslint-plugin": "^4.23.0",
-		"@typescript-eslint/parser": "^4.23.0",
-		"eslint": "^7.26.0",
+		"@typescript-eslint/eslint-plugin": "^4.28.0",
+		"@typescript-eslint/parser": "^4.28.0",
+		"eslint": "^7.29.0",
 		"eslint-plugin-svelte3": "^3.2.0",
-		"svelte": "^3.38.2",
+		"svelte": "^3.38.3",
 		"svelte-preprocess": "^4.7.3",
-		"tslib": "^2.2.0",
-		"typescript": "^4.2.4",
-		"vite": "^2.3.1"
-	},
-	"type": "module",
-	"engines": {
-		"node": ">= 12.17.0"
-	},
-	"dependencies": {
+		"tslib": "2.3.0",
+		"typescript": "^4.3.4",
+		"vite": "^2.3.8",
 		"@fortawesome/fontawesome-free": "^5.15.3",
-		"@sveltejs/adapter-static": "^1.0.0-next.9",
+		"@sveltejs/adapter-static": "^1.0.0-next.13",
 		"@sveltejs/svelte-virtual-list": "^3.0.1",
 		"make-dir": "^3.1.0",
 		"readdirp": "^3.6.0",
 		"svelte-tiny-virtual-list": "^1.1.6"
+	},
+	"type": "module",
+	"engines": {
+		"node": ">= 12.17.0"
 	}
 }
